<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.NewAnnouncementActivity">

    <EditText
        android:id="@+id/na_title"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/title"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/na_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_title" />

    <Button
        android:id="@+id/na_pick_photo"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_image" />

    <EditText
        android:id="@+id/na_description"
        android:layout_width="320dp"
        android:layout_height="130dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:ellipsize="start"
        android:gravity="start"
        android:hint="@string/description"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_pick_photo" />

    <TextView
        android:id="@+id/na_tags"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:hint="@string/tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_description" />

    <Button
        android:id="@+id/add_tag"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/add_tag"
        android:textSize="11dp"
        app:layout_constraintBottom_toTopOf="@+id/na_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/na_tags"
        app:layout_constraintTop_toBottomOf="@+id/na_description"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/euro_annuncio"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="€"
        app:layout_constraintBottom_toTopOf="@+id/na_addann"
        app:layout_constraintEnd_toStartOf="@+id/na_price"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_tags"
        app:layout_constraintVertical_bias="0.342" />

    <EditText
        android:id="@+id/na_price"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:background="@null"
        android:hint="xxxx.xx"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_tags" />

    <Button
        android:id="@+id/na_addann"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/add_annuncio"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/na_price" />

</androidx.constraintlayout.widget.ConstraintLayout>